2000-10-24  Alex Samuel  <samuel@codesourcery.com>

	* templates/py: New file.

2000-10-24  Alex Samuel  <samuel@codesourcery.com>

	* doc/design/qmconfig/...: Import.

2000-10-22  Alex Samuel  <samuel@codesourcery.com>

	* doc/design/qmtest/design.html: Import.
	
2000-10-22  Alex Samuel  <samuel@codesourcery.com>

	* doc/design: New directory.
	* doc/design/qmconfig: Likewise.
	* doc/design/qmbuild: Likewise.
	* doc/design/qmtest: Likewise.
	* doc/design/qmtrack: Likewise.
	
2000-10-22  Alex Samuel  <samuel@codesourcery.com>

	* ChangeLog: New file.
	* README.sources: Likewise.
	* COPYING: Likewise.
	
	* templates: New directory.
	* doc: Likewise.