@@ -3,12 +3,12 @@
 "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <!--
 
-  File:   Fill me in!
-  Author: Fill me in!
-  Date:   YYYY-MM-DD
+  File:   requirements.xhtml
+  Author: Alex Samuel
+  Date:   2000-10-20
 
   Contents:
-    Fill me in!
+    Requirements for the qmtrack tool.
 
   Copyright (C) 2000 CodeSourcery LLC
 
@@ -39,14 +39,17 @@
 
     <link rel="stylesheet" type="text/css" href="../../qm.css" />
 
-    <title>Fill me in!</title>
+    <title>qmtrack requirements</title>
   </head>
 
   <body>
-    <p>Text goes here.</p>
+    <a name="CHAP-requirements">
+      <h3>Requirements</h3>
+    </a>
   </body>
 </html>
 
 <!-- Local Variables: -->
 <!-- mode: html -->
 <!-- End: -->
+
