@@ -1,0 +1,142 @@
+/***********************************************************************
+
+  File:   qm.css
+  Author: Alex Samuel
+  Date:   2000-10-20
+
+  Contents:
+    Main style sheet for qm documentation.
+
+  Copyright (C) 2000 CodeSourcery LLC
+
+  Permission is hereby granted, free of charge, to any person
+  obtaining a copy of this software and associated documentation files
+  (the "Software"), to deal in the Software without restriction,
+  including without limitation the rights to use, copy, modify, merge,
+  publish, distribute, sublicense, and/or sell copies of the Software,
+  and to permit persons to whom the Software is furnished to do so,
+  subject to the following conditions:
+
+  The above copyright notice and this permission notice shall be
+  included in all copies or substantial portions of the Software.
+
+  THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND,
+  EXPRESS OR IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF
+  MERCHANTABILITY, FITNESS FOR A PARTICULAR PURPOSE AND
+  NONINFRINGEMENT. IN NO EVENT SHALL THE AUTHORS OR COPYRIGHT HOLDERS
+  BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER LIABILITY, WHETHER IN AN
+  ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM, OUT OF OR IN
+  CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
+  SOFTWARE.
+
+***********************************************************************/
+
+/* Document body.  */
+
+body {
+    margin-left: 10%;
+    margin-right: 10%;
+    color: black;
+    background: white;
+}
+
+
+/* Links.  */
+
+:link {
+    color: blue;
+    background-color: white;
+}
+
+:visited {
+    color: blue;
+    background-color: white;
+}
+
+:active {
+    color: blue;
+    background-color: white;
+    text-decoration: none;
+}
+
+:hover {
+    color: blue;
+    background-color: #ffccff;
+    text-decoration: none;
+}
+
+
+/* Headings.  Use
+     <h1>...</h1> for titles.
+     <h2>...</h2> for subtitles.
+     <h3>...</h3> for chapter headings.
+     <h4>...</h4> for section headings.
+     <h5>...</h5> for subsection headings.
+     <h6>...</h6> for subsubsection headings.  */
+
+h1 {
+    text-align: center;
+}
+
+h2 {
+    margin-left: -8%;
+}
+
+h3,h4,h5,h6 {
+    margin-left: -4%;
+}
+
+
+/* Table of contents.  Place table of contents inside
+     <div class="Contents">...</div> .  */
+
+div.Contents {
+    background-color: #ffffcc;
+    color: black;
+    border: none;
+    border-width: thin;
+    width: 100%;
+    padding: 1ex;
+}
+
+
+/* Definitions.  */
+
+/* Use <a class="TermDef">...</a> for the primary definition of a term
+   or concept.  */
+
+span.Dfn {
+    color: #000060;
+    background-color: white;
+    font-style: italics;    
+}
+
+/* Use <a class="Term">...</a> for subsequent uses of a defined term
+   or concept.  */
+
+a.TermDef {
+   color: #000060;
+   backgrond-color: white;
+   font-style: italic;
+}
+
+a.Term:link, a.Term:visited {
+    color: #000060;
+    background-color: white;
+    text-decoration: none;
+}
+
+a.Term:active, a.Term:hover {
+    color: #000060;
+    background-color: white;
+    text-decoration: underline;
+}
+
+
+/* Source code and such.  */
+
+/* Use <code>...</code> for other source code.  */
+
+code {
+}
+
